--- a/.github/workflows/DeployReactApp.yml
+++ b/.github/workflows/DeployReactApp.yml
@@ -3,21 +3,22 @@ name: Deploy React Application
 on:
   push:
     branches:
-      - "main"
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
+      - main
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.build-publish.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
     steps:
-    - id: build-publish
-      uses: bitovi/github-actions-react-to-ghp@v1.2.0
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
       with:
-        path: dist
+        node-version: ${{ matrix.node-version }}
+    - name: Install Packages
+      run: npm install
+    - name: Deploy to GH Pages
+      run: npm run deploy
+    - name: Updating Domain
+      run: echo "Update domain"
