--- a/.github/workflows/DeployReactApp.yml
+++ b/.github/workflows/DeployReactApp.yml
@@ -18,9 +18,10 @@ jobs:
       uses: actions/checkout@v2
     
     - name: Install Node.js
-      uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: 16
     
     - name: Install NPM packages
       run: npm ci
