--- a/.github/workflows/DeployReactApp.yml
+++ b/.github/workflows/DeployReactApp.yml
@@ -54,5 +54,5 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         publish_dir: ./build
