--- a/.github/workflows/DeployReactApp.yml
+++ b/.github/workflows/DeployReactApp.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
       with:
-        name: production-files
+        name: gh-pages
         path: ./build
   
   deploy:
